fix: revert "enhance: make List inner border fully covered by click active area"
This reverts commit dea44440afc35aa9450a4b7d8beb7980a5b6afd0.

--- a/src/components/list/list.less
+++ b/src/components/list/list.less
@@ -10,6 +10,9 @@
   background-color: #ffffff;
   overflow: hidden;
   font-size: 17px;
+  &-inner {
+    margin-bottom: -1px;
+  }
   &-default {
     border-top: var(--border-top);
     border-bottom: var(--border-bottom);
@@ -21,10 +24,6 @@
 }
 
 .adm-list-item {
-  margin-bottom: -1px;
-  &:not(:first-child) {
-    padding-top: 1px;
-  }
   display: block;
   padding-left: var(--padding-left);
   &-title,
